@@ -2,6 +2,8 @@ package com.roomster.roomsterbackend.service.impl;
 
 import com.roomster.roomsterbackend.dto.BaseResponse;
 import com.roomster.roomsterbackend.dto.comment.CommentPostDto;
+import com.roomster.roomsterbackend.dto.post.PostDto;
+import com.roomster.roomsterbackend.dto.user.PartUser;
 import com.roomster.roomsterbackend.entity.CommentEnity;
 import com.roomster.roomsterbackend.entity.UserEntity;
 import com.roomster.roomsterbackend.mapper.CommentMapper;
@@ -12,6 +14,7 @@ import com.roomster.roomsterbackend.service.IService.ICommentPostService;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.parameters.P;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -41,9 +44,9 @@ public class CommentPostService implements ICommentPostService {
     }
 
     @Override
-    public CommentPostDto updateComment(Long commentId,CommentPostDto commentPostDTO) {
+    public CommentPostDto updateComment(Long commentId, CommentPostDto commentPostDTO) {
         Optional<CommentEnity> oldComment = commentPostRepository.findById(commentId);
-        if(oldComment.isPresent()){
+        if (oldComment.isPresent()) {
             oldComment.get().setTitle(commentPostDTO.getTitle());
             oldComment.get().setContent(commentPostDTO.getContent());
             return commentMapper.entityToDTO(commentPostRepository.save(oldComment.get()));
@@ -55,7 +58,7 @@ public class CommentPostService implements ICommentPostService {
     public BaseResponse deleteComment(Long commentId) {
         try {
             commentPostRepository.deleteById(commentId);
-        }catch (Exception ex){
+        } catch (Exception ex) {
             BaseResponse.error(ex.getMessage());
         }
         return BaseResponse.success("Xóa Thành Công!");
@@ -63,8 +66,18 @@ public class CommentPostService implements ICommentPostService {
 
     @Override
     public List<CommentPostDto> getAllCommentOfPost(Long postId) {
-        return commentPostRepository.getCommentByPostId(postId)
-                .stream().map(commentPostEntity -> commentMapper.entityToDTO(commentPostEntity))
-                .collect(Collectors.toList());
+        List<CommentPostDto> commentPostDtos = commentPostRepository.getCommentByPostId(postId).stream().map(commentEnity -> commentMapper.entityToDTO(commentEnity)).toList();
+
+        for (CommentPostDto item : commentPostDtos
+        ) {
+            UserEntity user = new UserEntity();
+            PartUser partUser = new PartUser();
+            user = userRepository.findById(item.getUserId()).orElseThrow();
+            partUser.setUserName(user.getUserName());
+            partUser.setImages(user.getImages());
+
+            item.setPartUser(partUser);
+        }
+        return commentPostDtos;
     }
 }
